# tile57

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  THIRD_PARTY_LICENSES.md  build.zig  build.zig.zon  requirements.txt
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  security.yml
app/: chart_native_host.h  chart_native_host.mm  chart_renderer_frontend.cpp  chart_renderer_frontend.hpp  chart_tile_source.cpp  chart_tile_source.hpp  chartplotter.cpp  chartplotter_main.cpp  chartplotter_render_main.cpp  enc_root.hpp  metal_backend.h  metal_backend.mm  metal_render_hook.h  zig_glfw.cpp  zig_render.cpp  zig_tile_source.cpp  zig_tile_source.hpp
app/qt/: CMakeLists.txt  band_panel.cpp  band_panel.hpp  chart_window.cpp  chart_window.hpp  main.cpp  map_helpers.cpp  map_helpers.hpp  mariner_panel.cpp  mariner_panel.hpp  tile_server.cpp  tile_server.hpp
bindings/go/: README.md  asset.go  asset_test.go  bake.go  bundle_test.go  cell_test.go  cmem.go  compose.go  compose_test.go  coverage.go  errors.go  errors_test.go  go.mod  partition_test.go  progress.go  render.go  s57meta.go  s57meta_test.go  style.go  style_linestyles_test.go  style_test.go  surface.go  tile57.go  tile57_test.go
bindings/js/: README.md  index.d.ts  index.js  package.json  style-engine.wasm
bindings/js/examples/: generate.mjs
bindings/js/examples/web/: .gitignore  README.md  app.js  bake.sh  index.html  serve.py  serve.sh
bindings/parity/: parity.zig
bindings/scripts/: build-wasm.sh  gen-assets.sh  parity-check.sh
bindings/shared/: settings.zig
bindings/wasm/: style_wasm.zig
bindings/wasm/assets/: colortables.json  template.json
chartstyle/include/chartstyle/: chart_style.hpp  mariner.hpp
chartstyle/src/: chart_style.cpp
docs/: API.md  BUILD.md  PLAN.md  README.md  docusaurus.config.js  package.json  sidebars.js
docs/docs/: architecture.md  c-api.md  cli.md  getting-started.md  installation.md  intro.md  limitations.md  rendering.md  tile-schema.md  zig-api.md
docs/src/css/: custom.css
engine/: build.zig  build.zig.zon
engine/csrc/: lua_shim.c
engine/src/: bake_enc.zig  bake_root.zig  capi.zig  lib_root.zig  mvt_parity_test.zig  pmtiles.zig  portray.zig  root.zig  s101_adapt.zig  s57.zig  s57_mvt.zig  source.zig  tile.zig  tile57.zig
engine/src/assets/: assets.zig  style.zig
engine/src/bake_enc/: bake_enc.zig
engine/src/chartstyle/: chartstyle.zig
engine/src/iso8211/: iso8211.zig
engine/src/pmtiles/: pmtiles.zig
engine/src/portray/: lua_shim.c  portray.zig  rules_embed.zig
engine/src/s100/: catalogue.zig  s101_adapt.zig  s101_instr.zig
engine/src/s57/: s57.zig
engine/src/s57_mvt/: s57_mvt.zig
engine/src/sprite/: sprite.zig
engine/src/tile/: tile.zig
engine/tools/: bake.zig
include/: chartplotter.h  chartplotter_diag.h  tile57.h  tile57_diag.h  tilegen.h
scripts/: bench-bake.sh  build-qmaplibre.sh  build_sprite.py  chartshot.sh  check-style-parity.sh  dev-rebuild.sh  gen-catalogue.py  gen-reference.sh  gen-s57codes.py  gen-style.sh  macho-align.sh  mvt_inspect.py  py.sh  zig-build-lib.sh
specs/: go-fixes.md  go-sync.md  s101-port.md
src/: bake_root.zig  bundle.zig  capi.zig  chart.zig  errors.zig  lib_root.zig  mvt_parity_test.zig  root.zig  source.zig  tile57.zig
src/assets/: assets.zig  chartstyle.zig  style.zig
src/bake_enc/: bake_enc.zig
src/chartstyle/: chartstyle.zig
src/compose/: clip.zig  compose.zig
src/coverage/: coverage.zig
src/geo/: boolean.zig  geo.zig  partition.zig  plane.zig
src/geometry/: boolean.zig  boolean_repro_test.zig  geometry.zig  partition.zig  plane.zig
src/iso8211/: iso8211.zig
src/mlt/: mlt.zig
src/mvt/: mvt.zig
src/pmtiles/: pmtiles.zig
src/portray/: lua_shim.c  portray.zig  portray_golden_test.zig  rules_embed.zig
src/render/: ascii.zig  ascii_view_test.zig  canvas.zig  cb_canvas.zig  declutter.zig  font.zig  gpu.zig  inspect.zig  inspect_view_test.zig  kitty.zig  labelcache.zig  labeltier.zig  noop.zig  paint.zig  pdf.zig  pixel.zig  pixel_golden_test.zig  png.zig  query.zig  raster.zig  render.zig  resolve.zig  sndfrm.zig  surface.zig  symbols.zig  tess.zig  vector.zig
src/s100/: catalogue.zig  s100.zig  s101_adapt.zig  s101_instr.zig
src/s101/: adapter.zig  catalogue.zig  dataset.zig  instructions.zig  native.zig  s101.zig
src/s57/: iso8211.zig  s57.zig
src/s57_mvt/: bake_enc.zig  s57_mvt.zig
src/scene/: bake_enc.zig  compose.zig  lightreach.zig  linestyle.zig  partition_adapt.zig  replay.zig  scamin_pts.zig  scene.zig  symins.zig
src/sprite/: glyph.zig  glyphpbf.zig  sprite.zig  svgraster.c
src/style/: chartstyle.zig  maplibre.zig  mariner.zig  style.zig
src/surfaces/: noop.zig
src/testdata/: annapolis_z14.mvt
src/tile/: tile.zig
src/tiles/: band.zig  filemap.zig  gzip.zig  mlt.zig  mvt.zig  pmtiles.zig  tile.zig  tiles.zig
style/: build_style.py
tilegen/: build.zig  build.zig.zon
tilegen/csrc/: lua_shim.c
tilegen/src/: capi.zig  catalogue.zig  lib_root.zig  mvt.zig  pmtiles.zig  portray.zig  root.zig  s101_adapt.zig  s101_instr.zig  s57.zig  s57_mvt.zig  tile.zig
tilegen/tools/: bake.zig
tools/: ascii.zig  assets.zig  audit_holes.zig  audit_pairs.zig  bake.zig  catalog.zig  catalog_embed.zig  cell.zig  cells.zig  common.zig  compose.zig  compose_tile.zig  explore.zig  features.zig  glyphs.zig  gpudbg.zig  inspect.zig  livetile.zig  main.zig  objlcount.zig  partdbg_png.zig  pattern.zig  render.zig  s101_coverage.zig  s101_coverage_baseline.json  s101dump.zig  sprite.zig  sprite_mln.zig  style.zig  tiledump.zig  zoomsizes.zig
